--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
@@ -2,171 +2,144 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
         <title>Consultar Asistencias Capacitaciones</title>
-       
     <th:block th:include="../templates/header"></th:block>
-   
 </head>
 <body>
-     <script> Textheader('pnt_asiscap1',document.title);</script>
-<!--          <div class="contenedorizq"> 
-    <label  class="der">
-    <script >
-var f = new Date();
-document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
-</script></label>
-</div>-->
-<div class="row">
-            <div class="col-md-3">
+    <script> Textheader('pnt_asiscap1', document.title);</script>
+    <div class="row">
+        <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
-   <div class="col-md-9">
-     
-                        <div th:if="${not #lists.isEmpty(asistenciacapacitaciones)}">
-               <br><br>
-          <div class="row text-center">
-                        <img src="../../static/image/asistencia.png" width="150" th:src="@{/image/asistencia.png}"/>
-       
-            <!--<h2>Todas las asistencias Capacitacion</h2>-->
-           <table id="tablita" class="table table-striped table-bordered" >
-                    <thead>
-                    <tr>
-                    <th>Codigo de Asistencia de Capacitacion</th>
-                     <th>Capacitación</th>
-                      <!--<th>Empleado</th>-->
-                       <!--<th>Puesto</th>-->
-                        <th>Ubicacion Fisica</th>
-                    <th>Horas Recibidas</th>
-                    <th>Ubicacion Asistentes Capacitacion</th>
-                   
-                     <th>Telefono</th>
-                      <th>Correo</th>
-                    
-                    <th></th><th></th><th></th><th></th>
+        <div class="col-md-9">
+            <div th:if="${not #lists.isEmpty(asistenciacapacitaciones)}">
+                <br><br>
+                <div class="row text-center">
+                    <img src="../../static/image/asistencia.png" width="150" th:src="@{/image/asistencia.png}"/>
+                    <table id="tablita" class="table table-striped table-bordered" >
+                        <thead>
+                            <tr>
+                                <th>Codigo de Asistencia de Capacitacion</th>
+                                <th>Capacitación</th>
+                                <th>Ubicacion Fisica</th>
+                                <th>Horas Recibidas</th>
+                                <th>Ubicacion Asistentes Capacitacion</th>
+                                <th>Telefono</th>
+                                <th>Correo</th>
+                                <th></th><th></th>
+                                <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                                <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                            </tr>
+                        </thead>
+                        <tr th:each="asistenciacapacitacion : ${asistenciacapacitaciones}">
+                            <td th:text="${asistenciacapacitacion.codigoasistenciacapacitacion}">Codigo</td>
+                            <td th:text="${asistenciacapacitacion.codigocapacitacion.nombrecapacitacion}">Capacitacion</td>
+                            <td th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion Fisica</td>
+                            <td th:text="${asistenciacapacitacion.horasrecibidas}">Horas Recibidas</td>
+                            <td th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion de Capacitacion</td>
+                            <td th:text="${asistenciacapacitacion.telefono}">Telefono</td>
+                            <td th:text="${asistenciacapacitacion.email}">Correo</td>
+                            <td><a th:href="${'../empleadoasistenciacapacitaciones/new/empleadoasistenciacapacitacion/'+ asistenciacapacitacion.codigoasistenciacapacitacion }" class="btn btn-primary">Asignar Empleados</a></td>
+                            <td><a th:href="${'./show/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-info">Mostrar</a></td>
+                            <td sec:authorize="hasRole('ROLE_OPERATIVO')">  <a th:href="${'./edit/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-success">Editar</a></td>
+                            <td sec:authorize="hasRole('ROLE_OPERATIVO')">  <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${asistenciacapacitacion.codigoasistenciacapacitacion} + '\');'" >Eliminar</a></td>
 
-                </tr>
-                </thead>
-                <tr th:each="asistenciacapacitacion : ${asistenciacapacitaciones}">
-                    <td th:text="${asistenciacapacitacion.codigoasistenciacapacitacion}">Codigo</td>
-                       <td th:text="${asistenciacapacitacion.codigocapacitacion.nombrecapacitacion}">Capacitacion</td>
-                        <!--<td th:text="${asistenciacapacitacion.nombreempleado}">Empleado</td>-->
-                         <!--<td th:text="${asistenciacapacitacion.nombrepuesto}">Puesto</td>-->
-                          <td th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion Fisica</td>
-                    <td th:text="${asistenciacapacitacion.horasrecibidas}">Horas Recibidas</td>
-                    <td th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion de Capacitacion</td>
-                 
-                      <td th:text="${asistenciacapacitacion.telefono}">Telefono</td>
-                        <td th:text="${asistenciacapacitacion.email}">Correo</td>
+                    </table>
+                </div>
+            </div>
 
-
-                          <!--<td> <a th:href="${'./new/asistenciacapacitacion'}" class="btn btn-primary">Nuevo</a></td>-->
-                          <td><a th:href="${'../empleadoasistenciacapacitaciones/new/empleadoasistenciacapacitacion/'+ asistenciacapacitacion.codigoasistenciacapacitacion }" class="btn btn-primary">Asignar Empleados</a></td>
-                        <td><a th:href="${'./show/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-info">Mostrar</a></td>
-                      <td>  <a th:href="${'./edit/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-success">Editar</a></td>
-                   <td>  <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${asistenciacapacitacion.codigoasistenciacapacitacion} + '\');'" >Eliminar</a></td>
-                    
-            </table>
+        </div>
+        <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
         </div>
     </div>
-        
-       </div>
-     <div class="col-md-12">
-                    <th:block th:include="../templates/footer"></th:block>
-                </div>
-    </div>
 </body>
- <script th:inline="javascript">
-     Textheader('pnt_asca',document.title)
-    $(document).ready(function () {
-    if([[${msg}]]===0){
-       swal({
-                title: "Exito!",
-                text: "Registro agregado correctamente",
-                type: "success",
-                icon: "success"
-       }).then(function() {
-                location.href = '../asistenciacapacitaciones/';
-       }); 
-}
-    
-    if([[${msg}]]===1){
-        swal({
-                title: "ERROR!",
-                text: "Ocurrio un error en el proceso",
-                type: "error",
-                icon: "error"
-       });
-    }
+<script th:inline="javascript">
+    Textheader('pnt_asca', document.title)
+            $(document).ready(function () {
+    if ([[${msg}]] === 0){
+    swal({
+    title: "Exito!",
+            text: "Registro agregado correctamente",
+            type: "success",
+            icon: "success"
+    }).then(function() {
+    location.href = '../asistenciacapacitaciones/';
     });
-</script> 
+    }
+
+    if ([[${msg}]] === 1){
+    swal({
+    title: "ERROR!",
+            text: "Ocurrio un error en el proceso",
+            type: "error",
+            icon: "error"
+    });
+    }
+    });</script> 
 <script>
     $(document).ready(function () {
-        $('#fechapresentacion').datepicker({
-            dateFormat: 'yy-mm-dd'
-        });
-
-        
-        
+    $('#fechapresentacion').datepicker({
+    dateFormat: 'yy-mm-dd'
+    });
+    });</script>
+<script th:inline="javascript">
+    $(document).ready(function () {
+    $('#tablita').DataTable({
+    "language": {
+    "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+    }});
     });
 </script>
-  <script th:inline="javascript">
-      $(document).ready(function () {
-            $('#tablita').DataTable( {
-        "language": {
-            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
-        }} );
+<script th:inline="javascript">
+    $(document).ready(function () {
+
+
+    if ([[${msg}]] === 3){
+    swal({
+
+    title: "Exito!",
+            text: "Registro Eliminado correctamente",
+            type: "success",
+            icon: "success",
+    }).then(function() {
+    location.href = '../../asistenciacapacitaciones/';
     });
-	</script>
-      <script th:inline="javascript">
-        $(document).ready(function () {
-            
-            
-    if([[${msg}]]===3){
-       swal({
-           
-                title: "Exito!",
-                text: "Registro Eliminado correctamente",
-                type: "success",
-                icon: "success",
-       }).then(function() {
-                location.href = '../../asistenciacapacitaciones/';
-       }); 
-}
-    if([[${msg}]]===0){
-       swal({
-           
-                title: "Exito!",
-                text: "Registro Ingresado Exitosamente",
-                type: "success",
-                icon: "success",
-       }); 
-}
-    
-    if([[${msg}]]===4){
-        swal({
-                title: "ERROR!",
-                text: "Ocurrio un error al eliminar el registro",
-                type: "error",
-                icon: "error"
-       });
+    }
+    if ([[${msg}]] === 0){
+    swal({
+
+    title: "Exito!",
+            text: "Registro Ingresado Exitosamente",
+            type: "success",
+            icon: "success",
+    });
+    }
+
+    if ([[${msg}]] === 4){
+    swal({
+    title: "ERROR!",
+            text: "Ocurrio un error al eliminar el registro",
+            type: "error",
+            icon: "error"
+    });
     }
     });
-        
-        function eliminar(id) {
-            swal({
-                title: "Desea Eliminar?",
-                text: "Favor confirme que desea eliminar este registro!",
-                icon: "warning",
-                buttons: true,
-                dangerMode: true,
-            })
-                    .then((willDelete) => {
-                        if (willDelete) {
-                            location.href = './delete/' + id;
-                        } else {
-                            swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
-                        }
-                    });
-        }
-    </script>
-    </body>
+    function eliminar(id) {
+    swal({
+    title: "Desea Eliminar?",
+            text: "Favor confirme que desea eliminar este registro!",
+            icon: "warning",
+            buttons: true,
+            dangerMode: true,
+    })
+            .then((willDelete) => {
+            if (willDelete) {
+            location.href = './delete/' + id;
+            } else {
+            swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
+            }
+            });
+    }
+</script>
+</body>
 </html>
