--- a/src/main/resources/templates/fragments/asistenciacapacitacion/empleadoasistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/empleadoasistenciacapacitaciones.html
@@ -1,131 +1,107 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
-    <title>SISADMRH-Listado de Empleados para Capacitacion</title>
+    <head lang="en">
+        <title>SISADMRH-Listado de Empleados para Capacitacion</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-    <script> Textheader('pnt_geus1',document.title);</script>
-<!--          <div class="contenedorizq"> 
-    <label  class="der">
-    <script >
-var f = new Date();
-document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
-</script></label>
-</div>-->
-<div class="row">
- <div class="col-md-3">
-                        <th:block th:include="../templates/menu"></th:block>
-                    </div>
-    <div class="col-md-9">
-         <div class="row text-center">
-                        <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/listadoempleados.png}"/>
-                    </div>
-        <h3 align="center"></h3>
-    <!--<div th:if="${not #lists.isEmpty(empleadoasistenciacapacitaciones)}">-->
-     <form class="form-horizontal" id="formp" >
-         <input  readonly id="idasistencia" type="hidden"  th:each="emcapList, 0 : ${emcapLists}" th:value="${emcapList[__${5}__]}"  />
-        <div class="table-responsive">
-            <table id="tablita" class="table table-striped table-bordered" >
-                <thead>
-                  <!--<table class="table table-striped">-->
-                      <tr>
-                          <th>Nombre de Capacitacion</th>
-                          <th>Nombre empleado</th>
-                          <th>Ubicacion</th>
-                          <th>Quitar</th>
-                          
-                      </tr>
-                </thead>
-                      <tr th:each="emcapList, i : ${emcapLists}">
-                          <td th:text= "${emcapList[__${0}__]}">nombrecapacitacion</td>
-                          <td th:text= "${emcapList[__${1}__]}+ ' ' +${emcapList[__${2}__]}">nombrecapacitacion</td>
-                          <td th:text= "${emcapList[__${3}__]}">nombrecapacitacion</td>
-                          <td><a th:onclick="'eliminar(\'' +${emcapList[__${3}__]} +'\');'" class="btn btn-danger">Eliminar</a></td>
-                          
-<!--                          <td th:text="${iStat.nombrecapacitacion}">Nombre ca</td>
-                          <td th:text="${iStat.nombreempleado}">Nombre empleado</td>
-                          <td th:text="${iStat.ubicacionasistenciacapacitacion}">Ubicacion</td>-->
-                          <!--<td th:text="${empleadoasistenciacapacitacion.asistenciacapacitacion.codigoasistenciacapacitacion}">Codigo</td>-->
-                          <!--<td><a th:href="${'./delete/' + usuario.codigousuario}" class="btn btn-danger">Delete</a></td>-->
-                      </tr>
-
-                  </table>
-              </div>
-     
-            <div class="row" align="center">
-                <button type="button" id="btnRegresar" class="btn btn-primary"> <span class="glyphicon glyphicon-arrow-left"></span>Regresar</button>
-            </div>
-         </form>
-</div>
- 
-           
-    
-    </div>
-<div class="col-md-12">
-            <th:block th:include="../templates/footer"></th:block>
+    <script> Textheader('pnt_geus1', document.title);</script>
+    <div class="row">
+        <div class="col-md-3">
+            <th:block th:include="../templates/menu"></th:block>
         </div>
- 
+        <div class="col-md-9">
+            <div class="row text-center">
+                <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/listadoempleados.png}"/>
+            </div>
+            <h3 align="center"></h3>
+            <form class="form-horizontal" id="formp" >
+                <input  readonly id="idasistencia" type="hidden"  th:each="emcapList, 0 : ${emcapLists}" th:value="${emcapList[__${5}__]}"  />
+                <div class="table-responsive">
+                    <table id="tablita" class="table table-striped table-bordered" >
+                        <thead>
+                            <tr>
+                                <th>Nombre de Capacitacion</th>
+                                <th>Nombre empleado</th>
+                                <th>Ubicacion</th>
+                                <th sec:authorize="hasRole('ROLE_OPERATIVO')">Quitar</th>
+                            </tr>
+                        </thead>
+                        <tr th:each="emcapList, i : ${emcapLists}">
+                            <td th:text= "${emcapList[__${0}__]}">nombrecapacitacion</td>
+                            <td th:text= "${emcapList[__${1}__]}+ ' ' +${emcapList[__${2}__]}">nombrecapacitacion</td>
+                            <td th:text= "${emcapList[__${3}__]}">nombrecapacitacion</td>
+                            <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a th:onclick="'eliminar(\'' +${emcapList[__${3}__]} +'\');'" class="btn btn-danger">Eliminar</a></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="row" align="center">
+                    <button type="button" id="btnRegresar" class="btn btn-primary"> <span class="glyphicon glyphicon-arrow-left"></span>Regresar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="col-md-12">
+        <th:block th:include="../templates/footer"></th:block>
+    </div>
 </body>
 <script th:inline="javascript">
-      $(document).ready(function () {
-            $('#tablita').DataTable( {
-        "language": {
-            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
-        }} );
-    
+    $(document).ready(function () {
+    $('#tablita').DataTable({
+    "language": {
+    "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+    }});
     $('#btnRegresar').click(function(){
-        var value =  $("#idasistencia").val()
+    var value = $("#idasistencia").val()
 //         alert($("#asistencia").val().toString());          
 //            $("#formp").attr('action', '../../new/empleadoasistenciacapacitacion/'+ $("#idasistencia").val());
-            $("#formp").attr('action', './new/asistenciacapacitacion/'+value );
+            $("#formp").attr('action', './new/asistenciacapacitacion/' + value);
 //            $("#formempasis").attr('action', '../empleadoasistenciacapacitacion/');
-            $("form#formp").submit();
+    $("form#formp").submit();
     });
     });
-	</script>
-        
-         <script th:inline="javascript">
-        $(document).ready(function () {
-    if([[${msg}]]===3){
-       swal({
-           
-                title: "Exito!",
-                text: "Registro Eliminado correctamente",
-                type: "success",
-                icon: "success",
-       }).then(function() {
-                location.href = '../empleadoasistenciacapacitaciones/';
-       }); 
-}
-    
-    if([[${msg}]]===4){
-        swal({
-                title: "ERROR!",
-                text: "Ocurrio un error al eliminar el registro",
-                type: "error",
-                icon: "error"
-       });
+</script>
+
+<script th:inline="javascript">
+    $(document).ready(function () {
+    if ([[${msg}]] === 3){
+    swal({
+
+    title: "Exito!",
+            text: "Registro Eliminado correctamente",
+            type: "success",
+            icon: "success",
+    }).then(function() {
+    location.href = '../empleadoasistenciacapacitaciones/';
+    });
+    }
+
+    if ([[${msg}]] === 4){
+    swal({
+    title: "ERROR!",
+            text: "Ocurrio un error al eliminar el registro",
+            type: "error",
+            icon: "error"
+    });
     }
     });
-        
-        function eliminar(id) {
-            swal({
-                title: "Desea Eliminar?",
-                text: "favor confirme que desea eliminar este registro!",
-                icon: "warning",
-                buttons: true,
-                dangerMode: true,
-            })
-                    .then((willDelete) => {
-                        if (willDelete) {
-                            location.href = './delete/'+id+'/' + $("#idasistencia").val();
-                        } else {
-                            swal("Accion cancelada", "se ha cancelado la operaacion de eliminado", "error");
-                        }
-                    });
-        }
-    </script>
-        
+    function eliminar(id) {
+    swal({
+    title: "Desea Eliminar?",
+            text: "favor confirme que desea eliminar este registro!",
+            icon: "warning",
+            buttons: true,
+            dangerMode: true,
+    })
+            .then((willDelete) => {
+            if (willDelete) {
+            location.href = './delete/' + id + '/' + $("#idasistencia").val();
+            } else {
+            swal("Accion cancelada", "se ha cancelado la operaacion de eliminado", "error");
+            }
+            });
+    }
+</script>
+
 
 </html>
