--- a/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-    <!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>-->
      <th:block th:include="../templates/header"></th:block>
     <title>SISADMRH-Listado de Capacitaciones</title>
-   
-     
-    
 </head>
 <body>
     <script> Textheader('pnt_ceca',document.title);</script>
-<!--          <div class="contenedorizq"> 
-    <label  class="der">
-    <script >
-var f = new Date();
-document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
-</script></label>
-</div>-->
     <div th:if="${not #lists.isEmpty(capacitaciones)}">
-        
        <div class="row">
-        
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
@@ -29,7 +16,6 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
           <div class="row text-center">
                         <img src="../../static/image/capacitacion.png" width="150" th:src="@{/image/capacitacion.png}"/>
                          </div>
-           <!--<h3 align="center">Listado de Capacitaciones</h3>-->
            <form class="form-horizontal" id="formp" >    
       <table id="tablita" class="table table-striped table-bordered" >
                     <thead>
@@ -51,9 +37,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <th>Tipo Capacitación</th>
                 <th>Estado Capacitación</th>
                 <th>Nombre Capacitador</th>
-                <th></th>
-                <th></th><th></th><th></th>
-                
+                <th></th><th></th>
+                <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
             </tr>
                     </thead>
             <tr th:each="capacitacion : ${capacitaciones}">
@@ -69,24 +55,15 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <td th:text="${capacitacion.tipoevento}">Tipo Evento</td>
                 <td th:text="${capacitacion.especialidadevento}">Especialidad</td>
                 <td th:text="${capacitacion.paiscapacitacion}">Pais Capacitacion</td>
-                 <td th:text="${#calendars.format(capacitacion.fechacapacitaciondesde, 'dd/MM/yyyy')}">Fecha Desde</td>
-               <!--<td th:text="${#calendars.format(capacitacion.fechacapacitaciondesde, 'dd/MM/yyyy')}">Fecha Desde</td>-->
-                <!--<td th:text="${capacitacion.fechacapacitaciondesde}">Fecha Capacitacion Desde</td>-->
-                 <td th:text="${#calendars.format(capacitacion.fechacapacitacionhasta, 'dd/MM/yyyy')}">Fecha Desde</td>
-                <!--<td th:text="${capacitacion.fechacapacitacionhasta}">Fecha Capacitacion Hasta</td>-->
+                <td th:text="${#calendars.format(capacitacion.fechacapacitaciondesde, 'dd/MM/yyyy')}">Fecha Desde</td>
+                <td th:text="${#calendars.format(capacitacion.fechacapacitacionhasta, 'dd/MM/yyyy')}">Fecha Desde</td>
                 <td th:text="${capacitacion.tipocapacitacion}">Tipo Capacitacion</td>
                 <td th:text="${capacitacion.estadocapacitacion}">Estado Capacitacion</td>
                 <td th:text="${capacitacion.codigocapacitador.nombrecapacitador}">Nombre Capacitador</td>
                 <td><a th:onclick="'javascript:CrearLista(\'' + ${capacitacion.codigocapacitacion} + '\');'" type="submit" class="btn btn-warning">Crear Lista de Asistencia</a></td>
-                    
-              
-                   <!--<td>  <a th:href="${'./new/capacitacion'}" class="btn btn-primary">Nuevo</a> </td>-->
-                  <td>  <a th:href="${'./show/' + capacitacion.codigocapacitacion}" class="btn btn-info">Mostrar</a> </td>
-               <td> <a th:href="${'./edit/' + capacitacion.codigocapacitacion}" class="btn btn-success">Editar</a> </td>
-               <td>  <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${capacitacion.codigocapacitacion} + '\');'" >Eliminar</a> </td>
-               <!--<td><a th:href="${'./delete/' + capacitacion.codigocapacitacion}" class="btn btn-danger">Delete</a></td>-->
-                    <!--<td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${capacitacion.codigocapacitacion} + '\');'" >Delete</a></td>-->  
-               
+                <td><a th:href="${'./show/' + capacitacion.codigocapacitacion}" class="btn btn-info">Mostrar</a> </td>
+                <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a th:href="${'./edit/' + capacitacion.codigocapacitacion}" class="btn btn-success">Editar</a> </td>
+                <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${capacitacion.codigocapacitacion} + '\');'" >Eliminar</a> </td>
             </tr>
         </table>
             </form>   
