--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -1,155 +1,126 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
-    <title>Listado de Comites</title>
+    <head lang="en">
+        <title>Listado de Comites</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-<!--          <div class="contenedorizq"> 
-    <label  class="der">
-    <script >
-var f = new Date();
-document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
-</script></label>
-</div>
-    -->
-<!--<div class="container">-->
-<div th:if="${not #lists.isEmpty(comites)}">
-            <div class="row">
-                <div class="col-md-3">
-                        <th:block th:include="../templates/menu"></th:block>
-                    </div>
-                <div class="col-md-9">
-                          <br><br>
-          <div class="row text-center">
-                        <img src="../../static/image/roles.png" width="150" th:src="@{/image/roles.png}"/>
-<!--                    <h3 align="center">Listado de Comites</h3>-->
+    <div th:if="${not #lists.isEmpty(comites)}">
+        <div class="row">
+            <div class="col-md-3">
+                <th:block th:include="../templates/menu"></th:block>
+            </div>
+            <div class="col-md-9">
+                <br><br>
+                <div class="row text-center">
+                    <img src="../../static/image/roles.png" width="150" th:src="@{/image/roles.png}"/>
                     <table id="tablita" class="table table-striped table-bordered" >
-             <thead> 
-                        <tr>
-                             <th>Código</th>
-                            <th>Nombre</th>
-                            <th>Responsable</th>
-                            <th>Descripcion</th>
-                            <th>Nº de Acuerdo</th>
-                            <th>Miembros maximos</th>
-                            <th>Fecha Deesde</th>
-                            <th>Fecha Hasta</th>
-                            
-                            <th></th><th></th><th></th>
-
-                        </tr>
-             </thead>
+                        <thead> 
+                            <tr>
+                                <th>Código</th>
+                                <th>Nombre</th>
+                                <th>Responsable</th>
+                                <th>Descripcion</th>
+                                <th>Nº de Acuerdo</th>
+                                <th>Miembros maximos</th>
+                                <th>Fecha Deesde</th>
+                                <th>Fecha Hasta</th>
+                                <th></th>
+                                <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                                <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                            </tr>
+                        </thead>
                         <tr th:each="comite : ${comites}">
                             <td th:text="${comite.codigocomite}">Código</td>
                             <td th:text="${comite.nombrecomite}">Nombre</td>
-<!--                            <td th:text="${comite.dui}">DUI</td>
-                            <td th:text="${comite.nit}">NIT</td>-->
                             <td th:text="${comite.codigoempleado.nombreempleado}">Responsable</td>
                             <td th:text="${comite.desripcioncomite}">Descripción</td>
                             <td th:text="${comite.numeroacuerdocomite}">Numero Acuerdo</td>
                             <td th:text="${comite.miembromaximo}">Miembros Maximos</td>
-                            <!--<td th:text="${comite.fechadesdecomite}">Fecha Desde</td>-->
-                             <td th:text="${#calendars.format(comite.fechadesdecomite, 'dd/MM/yyyy')}">Fecha Desde</td>
-                            <!--<td th:text="${comite.fechahastacomite}">Fecha Hasta </td>-->
-                             <td th:text="${#calendars.format(comite.fechahastacomite, 'dd/MM/yyyy')}">F. Fecha Hasta</td>
-<!--                              <td th:text="${codigoempleado.codigoempleado}">fechahastacomite</td>-->
-
-                           
-                                 <!--<a th:href="${'./new/comite'}" class="btn btn-primary">Nuevo</a>-->
-                               <td>  <a th:href="${'./show/' + comite.codigocomite}" class="btn btn-info">Mostrar</a> </td>
-                          <td>  <a th:href="${'./edit/' + comite.codigocomite}" class="btn btn-success">Editar</a> </td>
-                              <td>   <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${comite.codigocomite} + '\');'" >Eliminar</a> </td>
-                           
-                           
-                            <!--<a th:href="${'./delete/' + comite.codigocomite}" class="btn btn-danger">Delete</a></td>-->
+                            <td th:text="${#calendars.format(comite.fechadesdecomite, 'dd/MM/yyyy')}">Fecha Desde</td>
+                            <td th:text="${#calendars.format(comite.fechahastacomite, 'dd/MM/yyyy')}">F. Fecha Hasta</td>                               <td>  <a th:href="${'./show/' + comite.codigocomite}" class="btn btn-info">Mostrar</a> </td>
+                            <td sec:authorize="hasRole('ROLE_OPERATIVO')">  <a th:href="${'./edit/' + comite.codigocomite}" class="btn btn-success">Editar</a> </td>
+                            <td sec:authorize="hasRole('ROLE_OPERATIVO')">   <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${comite.codigocomite} + '\');'" >Eliminar</a> </td>
                         </tr>
                     </table>
-                     <!--<th:block th:include="../templates/paginator-nav"></th:block>-->
-                
                 </div>
-                <!--<th:block th:include="../templates/paginator-nav"></th:block>-->
             </div>    
-             <div class="col-md-12">
-                    <th:block th:include="../templates/footer"></th:block>
-                </div>   
-    </div>
-    
-<!--</div>-->
+            <div class="col-md-12">
+                <th:block th:include="../templates/footer"></th:block>
+            </div>   
+        </div>
 
-<script th:inline="javascript">
-    Textheader('pnt_crco',document.title);
-    $(document).ready(function () {
-           
-    if([[${msg}]]===0){
-       swal({
-                title: "Exito!",
-                text: "Registro agregado correctamente",
-                type: "success",
-                icon: "success"
-       }).then(function() {
-                location.href = '../comites/';
-       }); 
-}
-    
-    if([[${msg}]]===1){
-        swal({
-                title: "ERROR!",
-                text: "Ocurrio un error en el proceso",
-                type: "error",
-                icon: "error"
-       });
-    }
-    });
-</script> 
- <script th:inline="javascript">
-      $(document).ready(function () {
-            $('#tablita').DataTable( {
-        "language": {
-            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
-        }} );
-    });
-	</script>
- <script th:inline="javascript">
-        $(document).ready(function () {
-    if([[${msg}]]===3){
-       swal({
-           
-                title: "Exito!",
-                text: "Registro Eliminado correctamente",
-                type: "success",
-                icon: "success",
-       }).then(function() {
-                location.href = '../../comites/';
-       }); 
-}
-    
-    if([[${msg}]]===4){
-        swal({
-                title: "ERROR!",
-                text: "Ocurrio un error al eliminar el registro",
-                type: "error",
-                icon: "error"
-       });
-    }
-    });
-        
-        function eliminar(id) {
+        <script th:inline="javascript">
+            Textheader('pnt_crco', document.title);
+            $(document).ready(function () {
+
+            if ([[${msg}]] === 0){
             swal({
-                title: "Desea Eliminar?",
-                text: "favor confirme que desea eliminar este registro!",
-                icon: "warning",
-                buttons: true,
-                dangerMode: true,
+            title: "Exito!",
+                    text: "Registro agregado correctamente",
+                    type: "success",
+                    icon: "success"
+            }).then(function() {
+            location.href = '../comites/';
+            });
+            }
+
+            if ([[${msg}]] === 1){
+            swal({
+            title: "ERROR!",
+                    text: "Ocurrio un error en el proceso",
+                    type: "error",
+                    icon: "error"
+            });
+            }
+            });</script> 
+        <script th:inline="javascript">
+            $(document).ready(function () {
+            $('#tablita').DataTable({
+            "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+            }});
+            });
+        </script>
+        <script th:inline="javascript">
+            $(document).ready(function () {
+            if ([[${msg}]] === 3){
+            swal({
+
+            title: "Exito!",
+                    text: "Registro Eliminado correctamente",
+                    type: "success",
+                    icon: "success",
+            }).then(function() {
+            location.href = '../../comites/';
+            });
+            }
+
+            if ([[${msg}]] === 4){
+            swal({
+            title: "ERROR!",
+                    text: "Ocurrio un error al eliminar el registro",
+                    type: "error",
+                    icon: "error"
+            });
+            }
+            });
+            function eliminar(id) {
+            swal({
+            title: "Desea Eliminar?",
+                    text: "favor confirme que desea eliminar este registro!",
+                    icon: "warning",
+                    buttons: true,
+                    dangerMode: true,
             })
                     .then((willDelete) => {
-                        if (willDelete) {
-                            location.href = './delete/' + id;
-                        } else {
-                            swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
-                        }
+                    if (willDelete) {
+                    location.href = './delete/' + id;
+                    } else {
+                    swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
+                    }
                     });
-        }
-    </script>
+            }
+        </script>
 </body>
 </html>
