--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitaciones.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitaciones.html
@@ -5,19 +5,16 @@
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-<!--<div class="container">-->
 <div class="row">
                 <div class="col-md-3">
                         <th:block th:include="../templates/menu"></th:block>
                     </div>
 <div th:if="${not #lists.isEmpty(diagnosticocapacitaciones)}">
-            
                 <div class="col-md-9">
                      <br><br>
           <div class="row text-center">
                         <img src="../../static/image/evaluacion.png" width="150" th:src="@{/image/evaluacion.png}"/>
                          </div>
-                    <!--<h3 align="center">Listado de Diagnosticos</h3>-->
                      <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
                          <thead>
                          <tr>
@@ -25,14 +22,9 @@
                               <th>Nombre Capacitación</th>
                             <th>Nombre Dirección</th>
                             <th>Necesidad de Capacitación</th>
-                           
-<!--                            <th>Que Mes es mas oportuno</th>
-                            <th>Años dejecucion</th>
-                            <th>Personal que recibira Capacitación</th>
-                            <th>Resultado que desea Obtener</th>
-                            <th>Nombre de quien Autoriza</th>
-                            <th>Cargo de quien Autoriza</th>-->
-                            <th></th><th></th><th></th>
+                            <th></th>
+                            <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                            <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
                         </tr>
                         </thead>
                         <tr th:each="diagnosticocapacitacion : ${diagnosticocapacitaciones}">
@@ -40,19 +32,9 @@
                             <td th:text="${diagnosticocapacitacion.codigocapacitacion.nombrecapacitacion}">Codigo de Diagnostico</td>
                             <td th:text="${diagnosticocapacitacion.direccion}">Direccion</td>
                             <td th:text="${diagnosticocapacitacion.necesidadcapacitacion}">Nesecidad</td>
-<!--                            <td th:text="${diagnosticocapacitacion.mescapacitacion}">Mes Mas Oportuno</td>
-                            <td th:text="${diagnosticocapacitacion.anioejecucion}">Anio Ejecucion</td>
-                            <td th:text="${diagnosticocapacitacion.personalrecibir}">Personal que recibira Capacitacion</td>
-                            <td th:text="${diagnosticocapacitacion.resultadoobtener}">Resultado que desea Obtener</td>
-                            <td th:text="${diagnosticocapacitacion.nombreautorizadiagnosticocapacitacion}">Nombre de Autorizador</td>
-                            <td th:text="${diagnosticocapacitacion.cargoautorizadiagnosticocapacitacion}">F. desde</td>
-                           -->
-<!--                              <td th:text="${codigoempleado.codigoempleado}">fechahastacomite</td>-->
-
                             <td><a th:href="${'./show/' + diagnosticocapacitacion.codigodiagnosticocapacitacion}" class="btn btn-info">Mostrar</a></td>
-                          <td>  <a th:href="${'./edit/' + diagnosticocapacitacion.codigodiagnosticocapacitacion}" class="btn btn-primary">Editar</a></td>
-                          <td> <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${diagnosticocapacitacion.codigodiagnosticocapacitacion} + '\');'" >Eliminar</a></td>
-                            <!--<a th:href="${'./delete/' + comite.codigocomite}" class="btn btn-danger">Delete</a></td>-->
+                            <td sec:authorize="hasRole('ROLE_OPERATIVO')">  <a th:href="${'./edit/' + diagnosticocapacitacion.codigodiagnosticocapacitacion}" class="btn btn-primary">Editar</a></td>
+                            <td sec:authorize="hasRole('ROLE_OPERATIVO')"> <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${diagnosticocapacitacion.codigodiagnosticocapacitacion} + '\');'" >Eliminar</a></td>
                         </tr>
                     </table>
                 </div>
