--- a/src/main/resources/templates/fragments/empleado/empleados.html
+++ b/src/main/resources/templates/fragments/empleado/empleados.html
@@ -15,7 +15,6 @@
             <div class="row text-center">
                         <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/images.jpeg}"/>
                     </div>
-        <!--</div>-->
         <h3 align="center"></h3>
         <table id="tablita" class="table table-striped table-bordered" >
             <thead> 
@@ -27,8 +26,8 @@
                 <th>NIT</th>
                 <th>Email</th>
                 <th></th>
-                <th></th>
-                <th></th>
+                <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
             </tr>
              </thead>
             <tr th:each="empleado : ${empleados}">
@@ -40,9 +39,9 @@
                 <td th:text="${empleado.emailempleado}">emailempleado</td>
                 <td><a th:href="${'./showcons/' + empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
                 <!--<td><a th:href="${'./show/' + empleado.codigoempleado}" class="btn btn-info">Gestion <br> complementaria</a></td>-->
-                <td><a th:href="${'./edit/' + empleado.codigoempleado}" class="btn btn-success">Editar</a></td>
+                <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a th:href="${'./edit/' + empleado.codigoempleado}" class="btn btn-success">Editar</a></td>
                 <!--<td><a th:href="${'./delete/' + empleado.codigoempleado}" class="btn btn-danger">Eliminar</a></td>-->
-                <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${empleado.codigoempleado} + '\');'" >Eliminar</a></td>
+                <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${empleado.codigoempleado} + '\');'" >Eliminar</a></td>
             </tr>
         </table>
         </div>
