--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitaciones.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitaciones.html
@@ -1,178 +1,118 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        <title>Listado de Evaulacion Capacitaciones</title>
+        <title>Listado de Evaluacion de Capacitaciones</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-<!--          <div class="contenedorizq"> 
-    <label  class="der">
-    <script >
-var f = new Date();
-document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
-</script></label>
-</div>-->
     <div class="row">
-             <div class="col-md-3">
-                        <th:block th:include="../templates/menu"></th:block>
-                    </div>
-     <div class="col-md-9">
-          <div class="row text-center">
-                        <img src="../../static/image/evaluacion.png" width="150" th:src="@{/image/evaluacion.png}"/>
-                         </div>
-<!--        <h3 align="center">Listado de Evaluaciones de Capacitacion</h3>-->
-       <div th:if="${not #lists.isEmpty(evaluacioncapacitaciones)}">
-          <table id="tablita" class="table table-striped table-bordered" >
-             <thead>
-                 <tr>
-                <th>Codigo Capacitación</th>
-                <th>Lugar Evaluacion</th>
-                <th>Hora</th>
-                <th>Dominio Tema</th>
-                <th>Habilidad Comunicación</th>
-                <!--<th>Llena sus Espectativas</th>-->
-<!--                <th>Contenido se desarrolla con claridad</th>
-                <th>Aclara Dudas</th>
-                <th>Mantiene el Interes del Tema</th>
-                <th>Satisfacción en el Tema</th>
-                <th>Comprensión del Tema</th>-->
-<!--                <th>Planeación del tema</th>
-                <th>Distribución de tiempo</th>
-                <th>Contenido Claro</th>
-                <th>Contenido aplicado a su trabajo</th>
-                <th>Satisfecho con el contenido</th>
-                <th>Es necesaria la Capacitación</th>
-                  <th>Tecnologia Adecuada</th>
-                    <th>Material Apropiado</th>
-                      <th>Tiempo Capacitación Optimo</th>
-                      <th>Comentario o Sugerencia</th>
-                      <th>Puntualidad en Fecha y Hora</th>-->
-                      
-                <th></th><th></th><th></th>
-                
-            </tr>
-         </thead>
-            <tr th:each="evaluacioncapacitacion : ${evaluacioncapacitaciones}">
-                <!--<td th:text="${capacitador.codigoempleado.nombreempleado}">Codigo</td>-->
-                <td th:text="${evaluacioncapacitacion.codigoevaluacioncapacitacion}">Codigo Evaluacion Capacitacion</td>
-                <!--<td th:text="${codigocapacitacion.nombrecapacitacion}">Nombre Capacitacion</td>-->
-                <td th:text="${evaluacioncapacitacion.lugarcapacitacion}">Lugar Evaluacion</td>
-                <td th:text="${#dates.format(evaluacioncapacitacion.horaevualuacioncapacitacion, 'dd/MM/yyyy HH:mm')}"></td>
-                <td th:text="${evaluacioncapacitacion.dominiotema}">Dominio Tema</td>
-                <td th:text="${evaluacioncapacitacion.habilidadcomunicacion}">Habilidad Comunicacion</td>
-<!--                <td th:text="${evaluacioncapacitacion.espectativa}">Llena sus Espectativas</td>
-                <td th:text="${evaluacioncapacitacion.claridadtema}">Contenido se desarrolla con claridad</td>-->
-<!--                <td th:text="${evaluacioncapacitacion.alclaradudas}">Aclara Dudas</td>
-                <td th:text="${evaluacioncapacitacion.interestema}">Mantiene el Interes del Tema</td>
-                <td th:text="${evaluacioncapacitacion.satifacciondetema}">Satisfaccion en el Tema</td>
-                <td th:text="${evaluacioncapacitacion.comprenciondetema}">Comprension del Tema</td>
-                <td th:text="${evaluacioncapacitacion.planeaciontiempo}">Planeacion del tiempo</td>-->
-<!--                <td th:text="${evaluacioncapacitacion.distribuciontiempo}">Distribucion de tiempo</td>
-                <td th:text="${evaluacioncapacitacion.contenidoclaro}">Contenido Claro</td>
-                <td th:text="${evaluacioncapacitacion.contenidoaplicadotrabajo}">Contenido aplicado a su trabajo</td>
-                <td th:text="${evaluacioncapacitacion.satisfechocontenido}">Satisfecho con el contenido</td>
-                  <td th:text="${evaluacioncapacitacion.necesariocapacitacion}">Es necesaria la Capacitacion</td>
-                <td th:text="${evaluacioncapacitacion.equipotecnologico}">Tecnologia Adecuada</td>
-                <td th:text="${evaluacioncapacitacion.materialutilizado}">Material Apropiado</td>
-                <td th:text="${evaluacioncapacitacion.tiempocapacitacionoptimo}">Tiempo Capacitacion Optimo</td>
-                <td th:text="${evaluacioncapacitacion.comentario}">Comentario o Sugerencia</td>
-                <td th:text="${evaluacioncapacitacion.puntualidad}">Puntualidad en Fecha y Horas</td>-->
-
-                
-                
-                
-                
-                
-                <!--<td th:text="${capacitacion.codigocapacitador.nombrecapacitador}">Nombre Capacitador</td>-->
-                
-                
-                    <td>  <a th:href="${'./show/' + evaluacioncapacitacion.codigoevaluacioncapacitacion}" class="btn btn-info">Mostrar</a></td>
-                    <td><a th:href="${'./edit/' + evaluacioncapacitacion.codigoevaluacioncapacitacion}" class="btn btn-success">Editar</a></td>
-                    <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${evaluacioncapacitacion.codigoevaluacioncapacitacion} + '\');'" >Eliminar</a></td>
-              
-               
-            </tr>
-        </table>
+        <div class="col-md-3">
+            <th:block th:include="../templates/menu"></th:block>
         </div>
-         </div>
+        <div class="col-md-9">
+            <div class="row text-center">
+                <img src="../../static/image/evaluacion.png" width="150" th:src="@{/image/evaluacion.png}"/>
+            </div>
+            <div th:if="${not #lists.isEmpty(evaluacioncapacitaciones)}">
+                <table id="tablita" class="table table-striped table-bordered" >
+                    <thead>
+                        <tr>
+                            <th>Codigo Capacitación</th>
+                            <th>Lugar Evaluacion</th>
+                            <th>Hora</th>
+                            <th>Dominio Tema</th>
+                            <th>Habilidad Comunicación</th>
+                            <th></th>
+                            <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                            <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                        </tr>
+                    </thead>
+                    <tr th:each="evaluacioncapacitacion : ${evaluacioncapacitaciones}">
+                        <td th:text="${evaluacioncapacitacion.codigoevaluacioncapacitacion}">Codigo Evaluacion Capacitacion</td>
+                        <td th:text="${evaluacioncapacitacion.lugarcapacitacion}">Lugar Evaluacion</td>
+                        <td th:text="${#dates.format(evaluacioncapacitacion.horaevualuacioncapacitacion, 'dd/MM/yyyy HH:mm')}"></td>
+                        <td th:text="${evaluacioncapacitacion.dominiotema}">Dominio Tema</td>
+                        <td th:text="${evaluacioncapacitacion.habilidadcomunicacion}">Habilidad Comunicacion</td>
+                        <td>  <a th:href="${'./show/' + evaluacioncapacitacion.codigoevaluacioncapacitacion}" class="btn btn-info">Mostrar</a></td>
+                        <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a th:href="${'./edit/' + evaluacioncapacitacion.codigoevaluacioncapacitacion}" class="btn btn-success">Editar</a></td>
+                        <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${evaluacioncapacitacion.codigoevaluacioncapacitacion} + '\');'" >Eliminar</a></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </div>
     <div class="col-md-12">
-                    <th:block th:include="../templates/footer"></th:block>
-                </div>
+        <th:block th:include="../templates/footer"></th:block>
+    </div>
     <script th:inline="javascript">
-       $(document).ready(function () {
-            $('#tablita').DataTable( {
+        $(document).ready(function () {
+        $('#tablita').DataTable({
         "language": {
-            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
-        }} );
-    
-    
-    });
-	</script>
+        "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+        }});
+        });
+    </script>
     <script th:inline="javascript">
-    $(document).ready(function () {
-      Textheader('pnt_evca',document.title);
-    if([[${msg}]]===0){
-       swal({
-                title: "Exito!",
+        $(document).ready(function () {
+        Textheader('pnt_evca', document.title);
+        if ([[${msg}]] === 0){
+        swal({
+        title: "Exito!",
                 text: "Registro agregado correctamente",
                 type: "success",
                 icon: "success"
-       }).then(function() {
-                location.href = '../evaluacioncapacitaciones/';
-       }); 
-}
-    
-    if([[${msg}]]===1){
+        }).then(function() {
+        location.href = '../evaluacioncapacitaciones/';
+        });
+        }
+
+        if ([[${msg}]] === 1){
         swal({
-                title: "ERROR!",
+        title: "ERROR!",
                 text: "Ocurrio un error en el proceso",
                 type: "error",
                 icon: "error"
-       });
-    }
-    });
-</script>  
-   
-     <script th:inline="javascript">
+        });
+        }
+        });</script>  
+    <script th:inline="javascript">
         $(document).ready(function () {
-    if([[${msg}]]===3){
-       swal({
-           
-                title: "Exito!",
+        if ([[${msg}]] === 3){
+        swal({
+
+        title: "Exito!",
                 text: "Registro Eliminado correctamente",
                 type: "success",
                 icon: "success",
-       }).then(function() {
-                location.href = '../../evaluacioncapacitaciones/';
-       }); 
-}
-    
-    if([[${msg}]]===4){
+        }).then(function() {
+        location.href = '../../evaluacioncapacitaciones/';
+        });
+        }
+
+        if ([[${msg}]] === 4){
         swal({
-                title: "ERROR!",
+        title: "ERROR!",
                 text: "Ocurrio un error al eliminar el registro",
                 type: "error",
                 icon: "error"
-       });
-    }
-    });
-        
+        });
+        }
+        });
         function eliminar(id) {
-            swal({
-                title: "Desea Eliminar?",
+        swal({
+        title: "Desea Eliminar?",
                 text: "Favor confirme que desea eliminar este registro!",
                 icon: "warning",
                 buttons: true,
                 dangerMode: true,
-            })
-                    .then((willDelete) => {
-                        if (willDelete) {
-                            location.href = './delete/' + id;
-                        } else {
-                            swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
-                        }
-                    });
+        })
+                .then((willDelete) => {
+                if (willDelete) {
+                location.href = './delete/' + id;
+                } else {
+                swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
+                }
+                });
         }
     </script>
 </body>
