--- a/src/main/resources/templates/fragments/mision/misiones.html
+++ b/src/main/resources/templates/fragments/mision/misiones.html
@@ -5,18 +5,7 @@
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-    <script> Textheader('pnt_cme',document.title);</script>
-<!--            <div class="contenedorizq"><label  >pnt_cme</label>  
-    <label  class="der">
-    <script >
-var f = new Date();
-document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
-</script></label>
-</div><br>-->
-<!--<div class="container">-->
-    
-    
-        
+    <script> Textheader('pnt_cme',document.title);</script>        
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
@@ -24,8 +13,6 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
            <div class="row text-center">
                     <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/mision.png}"/>
             </div> 
-        <!--</div>-->
-        <!--<div th:if="${not #lists.isEmpty(misiones)}" >-->
         <h3 align="center"></h3>
         <table id="tablita" class="table table-striped table-bordered" >
             <thead>
@@ -37,8 +24,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <th>Fecha de Salida</th>
                 <th>Fecha de Regreso</th>
                 <th></th>
-		<th></th>
-		<th></th>
+		<th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+		<th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
             </tr>
             </thead>
             <tr th:each="mision : ${misiones}">
@@ -50,8 +37,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <td th:text="${#calendars.format(mision.fechasalidamision, 'dd/MM/yyyy')}">fechasalidamision</td>
                 <td th:text="${#calendars.format(mision.fecharegresomision, 'dd/MM/yyyy')}">fecharegresomision</td>
                 <td><a th:href="${'./show/' + mision.codigomision}" class="btn btn-info">Mostrar</a></td>
-                <td><a th:href="${'./edit/' + mision.codigomision}" class="btn btn-success">Modificar</a></td>
-                <td><a th:onclick="'eliminar(\'' + ${ mision.codigomision} +'\');'" class="btn btn-danger">Eliminar</a></td>
+                <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a th:href="${'./edit/' + mision.codigomision}" class="btn btn-success">Modificar</a></td>
+                <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a th:onclick="'eliminar(\'' + ${ mision.codigomision} +'\');'" class="btn btn-danger">Eliminar</a></td>
             </tr>
         </table>
         <!--</div>-->
