--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
@@ -6,22 +6,13 @@
 </head>
 <body>
      <div class="row">     
-<!--    <div class="contenedorizq"> 
-    <label  class="der">
-    <script >
-var f = new Date();
-document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
-</script></label>
-</div>-->
 <div class="col-md-3">
                         <th:block th:include="../templates/menu"></th:block>
                     </div>
      <div class="col-md-9">
-    
          <br><br>
           <div class="row text-center">
                         <img src="../../static/image/formacion.png" width="200" th:src="@{/image/formacion.png}"/>
-    
     <div th:if="${not #lists.isEmpty(nivelescolaridades)}">
           <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
              <thead>
@@ -34,13 +25,12 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                    <th>País del nivel escolar</th>
                    <th>Fecha Desde</th>
                    <th>Fecha Hasta</th>
-                 <th></th><th></th><th></th>
-                   
-                
+                 <th></th>
+                 <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                 <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
             </tr>
              </thead>
             <tr th:each="nivelescolaridad : ${nivelescolaridades}">
-
                 <td th:text="${nivelescolaridad.centroeducativo}">Centro educativo</td>
                 <td th:text="${nivelescolaridad.aniosaprobados}">Anos aprobados</td> 
                 <td th:text="${nivelescolaridad.estudiorealizado}">Estudios</td> 
@@ -49,17 +39,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <td th:text="${nivelescolaridad. paisnivelescolaridad}">Pais nivel escolaridad</td>
                 <td th:text="${#calendars.format(nivelescolaridad.fechadesdenivelescolaridad, 'dd/MMM/yyyy')}">Fecha Desde</td>
                 <td th:text="${#calendars.format(nivelescolaridad.fechahastanivelescolaridad, 'dd/MMM/yyyy')}">Fecha Hasta</td>
-<!--                <td th:text="${#dates.format(nivelescolaridad.fechadesdenivelescolaridad, 'dd/MM/yyyy')}">fechadesdenivelescolaridad</td>
-                <td th:text="${#calendars.format(nivelescolaridad.fechahastanivelescolaridad, 'dd/MM/yyyy')}">fechahastanivelescolaridad</td>
-                -->
-               
-                    
-                  <!--<a th:href="${'./new/nivelescolaridad'}" class="btn btn-primary">Nuevo</a>-->
-                   <td>  <a th:href="${'./show/' + nivelescolaridad.codigonivelnivelescolaridad}" class="btn btn-info">Mostrar</a></td>
-                <td> <a th:href="${'./edit/' + nivelescolaridad.codigonivelnivelescolaridad}" class="btn btn-success">Editar</a> </td>
-                <td> <a  class="btn btn-danger" th:onclick="'eliminar(\''+ ${nivelescolaridad.codigonivelnivelescolaridad} + '\');'" >Eliminar</a> </td>
-                <!--<a th:href="${'./delete/' + nivelescolaridad.codigonivelnivelescolaridad}" class="btn btn-danger">Delete</a>-->
-                
+                <td>  <a th:href="${'./show/' + nivelescolaridad.codigonivelnivelescolaridad}" class="btn btn-info">Mostrar</a></td>
+                <td sec:authorize="hasRole('ROLE_OPERATIVO')"> <a th:href="${'./edit/' + nivelescolaridad.codigonivelnivelescolaridad}" class="btn btn-success">Editar</a> </td>
+                <td sec:authorize="hasRole('ROLE_OPERATIVO')"> <a  class="btn btn-danger" th:onclick="'eliminar(\''+ ${nivelescolaridad.codigonivelnivelescolaridad} + '\');'" >Eliminar</a> </td>
             </tr>
         </table>
     </div>
