--- a/src/main/resources/templates/fragments/puesto/puestos.html
+++ b/src/main/resources/templates/fragments/puesto/puestos.html
@@ -5,18 +5,8 @@
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-<!--          <div class="contenedorizq"> 
-    <label  class="der">
-    <script >
-var f = new Date();
-document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
-</script></label>
-</div>-->
 <script> Textheader('pnt_cpto1',document.title);</script>
-<!--<div class="container">-->
-    
     <div th:if="${not #lists.isEmpty(puestos)}" >
-        
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
@@ -24,7 +14,6 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <div class="row text-center">
                     <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/puestos.png}"/>
             </div> 
-        <!--</div>-->
         <h3 align="center"></h3>
         <table id="tablita" class="table table-striped table-bordered" >
             <thead>
@@ -32,34 +21,27 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <th>Codigo de Puesto</th>
                 <th>Nombre de  Puesto</th>
                 <th>Sueldo Base</th>
-                <!--<th>Sueldo Tope Puesto</th>-->
                 <th>Estado</th>
                 <th>Fecha Aprobacion </th>
-                <!--<th>Fecha Nombramiento</th>-->
                 <th>Fecha de Baja</th>
                 <th></th>
-		<th></th>
-		<th></th>
+		<th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+		<th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
             </tr>
             </thead>
             <tr th:each="puesto : ${puestos}">
                 <td th:text="${puesto.codigopuesto}">codigopuesto</td>
                 <td th:text="${puesto.nombrepuesto}">nombrepuesto</td>
                 <td th:text="${puesto.sueldobase}">sueldobase</td>
-                <!--<td th:text="${puesto.sueldotopepuesto}">control</td>-->
                 <td>
                     <span th:if="${puesto.estadopuesto} == 1"  th:text="Activo"  ></span>
                     <span th:if="${puesto.estadopuesto} == 2"  th:text="Inactivo"></span>
-                    
                </td> 
-                
-                
                 <td th:text="${#calendars.format(puesto.fechaaprobacion, 'dd/MM/yyyy')}	">fecha ingreso</td>
-                <!--<td th:text="${puesto.fechanombramiento}">fecha caducidad</td>-->
                 <td th:text="${#calendars.format(puesto.fechabaja, 'dd/MM/yyyy')}	">fecha baja</td>
                 <td><a th:href="${'./show/' + puesto.codigopuesto}" class="btn btn-info">Mostrar</a></td>
-                <td><a th:href="${'./edit/' + puesto.codigopuesto}" class="btn btn-success">Modificar</a></td>
-                <td><a th:onclick="'eliminar(\'' +${ puesto.codigopuesto} +'\');'" class="btn btn-danger">Eliminar</a></td>
+                <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a th:href="${'./edit/' + puesto.codigopuesto}" class="btn btn-success">Modificar</a></td>
+                <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a th:onclick="'eliminar(\'' +${ puesto.codigopuesto} +'\');'" class="btn btn-danger">Eliminar</a></td>
             </tr>
         </table>
         </div>
