hasta aqui funnciona los exeles misiones,incapacidades,hijos capacidades especiales,historial,renuncias,exonerados,escolares,plazas ocupadas

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -256,6 +256,7 @@
                                     <li sec:authorize="hasRole('ROLE_OPERATIVO')"><a href="#" th:href="@{/otherreports/motoristas/}">Reporte de Motoristas</a></li>
                                     <li sec:authorize="hasRole('ROLE_OPERATIVO')"><a href="#" th:href="@{/otherreports/notarios/}">Reporte de Notarios</a></li>
                                     <li sec:authorize="hasRole('ROLE_OPERATIVO')"><a href="#" th:href="@{/otherreports/comites/}">Reporte de comites</a></li>
+                                       <li sec:authorize="hasRole('ROLE_OPERATIVO')"><a href="#" th:href="@{/otherreports/comisiones/}">Reporte de comisiones</a></li>
                                     <li sec:authorize="hasRole('ROLE_OPERATIVO')"><a href="#" th:href="@{/otherreports/capacitaciones/}">Reporte de capacitaciones</a></li>
                                     <li sec:authorize="hasRole('ROLE_OPERATIVO')"><a href="#" th:href="@{/otherreports/cumpleanieros/}">Reporte de cumpleañeros</a></li>
                                     <!--<li><a href="#" th:href="@{/comites/report/}">Reporte comites</a></li>-->
